Try to fix search on mobile.

--- a/web/css/831a392.css
+++ b/web/css/831a392.css
@@ -7146,13 +7146,21 @@ input[type="checkbox"] {
 .navbar-search {
     height: 50px;
     margin-top: 20px;
+    position: relative;
+    z-index: 999;
 }
 .navbar-search > input {
-    /*width: 300px;*/
+    width: 300px;
     border-radius: 25px;
     background-color: #374046;
     border-color: #374046;
     color: #ccc;
+}
+.navbar-search > ul {
+    position: relative;
+    z-index: 9999;
+    width: auto;
+    display: none;
 }
 
 @media (max-width: 767px) {
